--- a/app/styles/modules/_article.scss
+++ b/app/styles/modules/_article.scss
@@ -26,14 +26,19 @@
   &.preview {
     header {
       width: 100%;
-      height: 340px;
       overflow: hidden;
-      position: relative;
-      img {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    }
+    @include desktop {
+      header {
+        height: 340px;
+        overflow: hidden;
+        position: relative;
+        img {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
     }
   }
@@ -59,6 +64,7 @@
 .article-read {
   @include content-column;
   @include body-copy;
+  @include break-words;
   color: #1a1a1a;
   position: relative;
 
